tests/snapshots/examples_fixtures/type_system__typed_let_with_base.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/typed_let_with_base.flx
== compile ==
failed (compile)
== diagnostics ==
error[E300]: Annotation Type Mismatch

The value of `nums` does not match its type annotation.

  examples/type_system/typed_let_with_base.flx:26:28
   |
26 |     let nums: Array<Int> = range(1, 6)
   |                            ^^^^^^^^^^^
   |                            ----------- this value has type `List<Int>`

   |               ---------- but `nums` was annotated as `Array<Int>`

Note:
  annotated type: Array<Int>
  value type: List<Int>

Help:
  Change `nums` to a `Array<Int>` value or update the annotation.


error[E300]: Annotation Type Mismatch

The value of `rev` does not match its type annotation.

  examples/type_system/typed_let_with_base.flx:44:27
   |
44 |     let rev: Array<Int> = reverse(nums)
   |                           ^^^^^^^^^^^^^
   |                           ------------- this value has type `List<_>`

   |              ---------- but `rev` was annotated as `Array<Int>`

Note:
  annotated type: Array<Int>
  value type: List<_>

Help:
  Change `rev` to a `Array<Int>` value or update the annotation.


error[E300]: Annotation Type Mismatch

The value of `zipped` does not match its type annotation.

  examples/type_system/typed_let_with_base.flx:47:37
   |
47 |     let zipped: Array<(Int, Int)> = zip(nums, doubled)
   |                                     ^^^^^^^^^^^^^^^^^^
   |                                     ------------------ this value has type `List<(_, _)>`

   |                 ----------------- but `zipped` was annotated as `Array<(Int, Int)>`

Note:
  annotated type: Array<(Int, Int)>
  value type: List<(_, _)>

Help:
  Change `zipped` to a `Array<(Int, Int)>` value or update the annotation.


error[E300]: Argument Type Mismatch

I found the wrong type in the 1st argument to `sum`.

  examples/type_system/typed_let_with_base.flx:60:19
   |
60 |     assert_eq(sum(ints), 6)
   |                   ^^^^
   |                   ---- this argument has type `Array<Int>`

Note:
  expected argument type: List<Int>
  found argument type: Array<Int>
  the actual argument type is inferred from this expression

Help:
  Pass a `List<Int>` value as the 1st argument.

Found 4 errors.
== stdout ==
<not executed>
